feat: branches autoexpand

--- a/public/index.html
+++ b/public/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <!-- <link rel="stylesheet" type="text/css" href="faders.css" /> -->
+    <link rel="stylesheet" type="text/css" href="button.css" />
     <style>
       body {
         background-color: #272727;
@@ -26,7 +26,7 @@
   <body>
     <div id="diff"></div>
     <br>
-    <button id="refresh">Refresh data from console</button>
+    <button id="refresh" class="mattyButton">Refresh data from console</button>
     <script src="index.js"></script>
   </body>
 </html>
