--- a/public/index.html
+++ b/public/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
+    <title>x32-diff</title>
     <link rel="stylesheet" type="text/css" href="button.css" />
     <style>
       body {
